レイアウト修正

--- a/app/views/admin/components/index.html.erb
+++ b/app/views/admin/components/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row mt-4 mb-3">
    <div class="d-flex justify-content-between w-100">
-     <h4 class="p-3 mb-2 text-dark w-25 text-center" style="color: #494949; background: #FFF8DC; border-left: solid 5px #2f4f4f;">成分一覧</h4>
+     <h4 class="p-3 mb-2 text-dark w-25 text-center" style="color: #494949; background: #FFF8DC;">成分一覧</h4>
      <h5 class ="flex-box">
        <%= link_to "成分カテゴリーを追加する" ,admin_comp_categories_path, class: "btn btn-outline-success text-center" %>
        <%= link_to "成分を追加する" ,new_admin_component_path, class: "btn btn-outline-success" %>
