--- a/app/views/admin/components/index.html.erb
+++ b/app/views/admin/components/index.html.erb
@@ -1,17 +1,16 @@
 <div class="container">
   <div class="row mt-4 mb-3">
    <div class="d-flex justify-content-between w-100">
-     <h4 class="p-3 mb-2 text-dark w-25 text-center" style="color: #494949; background: #FFF8DC;">成分一覧</h4>
+     <h4 class="offset-2 p-3 mb-2 text-dark w-25 text-center" style="color: #494949; background: #FFF8DC;">成分一覧</h4>
      <h5 class ="flex-box">
        <%= link_to "成分カテゴリーを追加する" ,admin_comp_categories_path, class: "btn btn-outline-success text-center" %>
        <%= link_to "成分を追加する" ,new_admin_component_path, class: "btn btn-outline-success" %>
      </h5>
    </div>
-   <div class="col-md-12 mb-5">
+   <div class="col-md-8 offset-2 mb-5">
     <table class="table table-hover mt-4 mb-5">
       <thead>
         <tr class="thead" style="background-color: #FFF8DC;">
-          <th>成分ID</th>
           <th>成分カテゴリー名</th>
           <th>成分名</th>
           <th>ステータス</th>
@@ -20,7 +19,6 @@
       <tbody>
         <% @components.each do |component| %>
           <tr>
-            <td><%= component.comp_category_id %></td>
             <td><%= component.comp_category.name %></td>
             <td><%= link_to component.name,admin_component_path(component), class:"text-secondary" %></td>
             <td>
