レイアウト修正

--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container mt-5">
-  <h4 class="offset-3 p-3 mb-3 w-25 text-center" style="color: #494949; background: #FFF8DC; border-left: solid 5px #2f4f4f;">商品新規登録</h4>
+  <h4 class="offset-3 p-3 mb-3 w-25 text-center" style="color: #494949; background: #FFF8DC;">商品新規登録</h4>
 </div>
 <div class="container", style="margin-left: 30rem;">
   <div class="row">
@@ -50,7 +50,7 @@
           </tr>
           <tr>
             <td></td>
-            <td><%= f.submit "新規登録", class: "mb-5 btn btn-outline-success" %></td>
+            <td><%= f.submit "新規登録", class: "col-md-5 mb-5 btn btn-outline-success" %></td>
           </tr>
         </table>
       <% end %>
