--- a/app/views/admin/components/show.html.erb
+++ b/app/views/admin/components/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row mt-5 mb-4">
     <div class="col-md-4 offset-1">
-      <h4 class="p-3 mb-2 w-50 text-center" style="color: #494949; background: #80aba9; border-left: solid 5px #2f4f4f;">成分詳細</h4>
+      <h4 class="p-3 mb-2 w-50 text-center" style="color: #494949; background: #FFF8DC;">成分詳細</h4>
     </div>
   </div>
   <div class="row mt-4 mb-5">
