--- a/app/views/admin/comp_categories/index.html.erb
+++ b/app/views/admin/comp_categories/index.html.erb
@@ -16,7 +16,7 @@
         </div>
       <% end %>
     </div>
-    <div class="col-6 offset-3 mb-3">
+    <div class="col-md-6 offset-3 mb-3">
       <table class="table table-hover">
         <tr class="" style="text-align: center; background-color: #FFF8DC;">
           <th>成分カテゴリー</th>
