--- a/app/views/admin/item_categories/index.html.erb
+++ b/app/views/admin/item_categories/index.html.erb
@@ -1,24 +1,24 @@
 <!-- 商品カテゴリー編集画面-->
 <div class="container">
-  <div class="row mt-3">
-    <h4 class="p-3 mb-2 w-50 text-center" style="color: #494949; background: #80aba9; border-left: solid 5px #2f4f4f;">商品カテゴリー一覧・追加</h4>
+  <div class="row mt-5">
+    <h4 class="col-md-4 offset-4 p-3 mb-3 w-50 text-center" style="color: #494949; background: #FFF8DC;">商品カテゴリー一覧・追加</h4>
   </div>
   <div class="row">
-    <div class="col-10 my-3">
+    <div class="col-md-6 offset-4 my-3">
       <%= form_with model: @item_category, url: admin_item_categories_path, local: true do |f| %>
-      <div class="col-md-7">
-        <%= render "layouts/error", model: f.object %>
-      </div>
-      <div class="row">
-        <%= f.label :商品カテゴリー名 %>
-        <%= f.text_field :name, placeholder: "商品カテゴリー名", class: "mx-4" %>
-        <%= f.submit "新規登録", class: "btn btn-outline-success col-2" %>
-      </div>
+        <div class="col-md-7">
+          <%= render "layouts/error", model: f.object %>
+        </div>
+        <div class="row">
+          <%= f.label :商品カテゴリー名 %>
+          <%= f.text_field :name, placeholder: "商品カテゴリー名", class: "mx-4" %>
+          <%= f.submit "新規登録", class: "btn btn-outline-success col-2" %>
+        </div>
       <% end %>
     </div>
-    <div class="col-6 mb-3">
+    <div class="col-md-6 offset-3 mb-3">
       <table class="table table-hover">
-        <tr class="" style="text-align: center; background-color: #bed3ca;">
+        <tr class="" style="text-align: center; background-color:#FFF8DC;">
           <th>商品カテゴリー</th>
           <th></th>
         </tr>
