--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
         <ul class="nav navbar-nav ml-auto">
           <!-- 利用者がログインしている時 -->
           <% if user_signed_in? %>
-            <li class="nav-item">
+            <li class="nav-item mr-3">
               <%= link_to root_path do %>
                 <i class="fas fa-home text-black-50"> トップページ </i>
               <% end %>
@@ -19,17 +19,17 @@
                 <i class="fas fa-user-cog text-black-50"> マイページ </i>
               <% end %>
             </li>
-            <li class="nav-item">
+            <li class="nav-item mr-3">
               <%= link_to items_path do %>
                 <i class="fas fa-list text-black-50"> 商品一覧 </i>
               <% end %>
             </li>
-            <li class="nav-item">
+            <li class="nav-item mr-3">
               <%= link_to components_path do %>
                 <i class="fas fa-list text-black-50"> 成分一覧 </i>
               <% end %>
             </li>
-            <li class="nav-item">
+            <li class="nav-item mr-3">
               <%= link_to destroy_user_session_path, method: :delete do %>
                 <i class="fas fa-sign-out-alt text-black-50"> ログアウト </i>
               <% end %>
@@ -58,16 +58,16 @@
             </li>
           <!-- 利用者ログインしていない時 -->
           <% else user_signed_in? %>
-            <li class="nav-item">
+            <li class="nav-item mr-3">
               <%= link_to root_path do %>
                 <i class="fas fa-home text-black-50"> トップページ </i>
               <% end %>
-            <li class="nav-item">
+            <li class="nav-item mr-3">
               <%= link_to new_user_registration_path do %>
                 <i class="fas fa-pencil-alt text-black-50"> 新規登録 </i>
               <% end %>
             </li>
-            <li class="nav-item">
+            <li class="nav-item mr-3">
               <%= link_to new_user_session_path do %>
                 <i class="fas fa-sign-in-alt text-black-50"> ログイン </i>
               <% end %>
